# trish

./: CMakeLists.txt  LICENSE  a.cc  b.cc  c.cc  d.cc  trish.cc
stripack/: README  addnod.f90  areas.f90  bdyadd.f90  bnodes.f90  circum.f90  covsph.f90  crlist.f90  delarc.f90  delnb.f90  delnod.f90  edge.f90  getnp.f90  insert.f90  inside.f90  intadd.f90  intrsc.f90  jrand.f90  left.f90  lstptr.f90  nbcnt.f90  nearnd.f90  optim.f90  res  res_4.eps  scoord.f90  store.f90  stritest.f90  swap.f90  swptst.f90  trans.f90  trfind.f90  trlist.f90  trlprt.f90  trmesh.f90  trplot.f90  trprnt.f90  vrplot.f90
